# websockets_chat_backend

./: .gitignore  pyproject.toml
app/: database.py  main.py
app/models/: friendships.py  user.py
app/routers/: friendships.py  upload.py  user.py  websocket.py
