[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "joaolucasalves010",email = "ylucasslalves@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[all] (>=0.135.3,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
